<resources>


    <string name="app_name">MyDzMaketTwo</string>
    <string name="counter_1" >1</string>
    <string name="counter_2" >2</string>
    <string name="counter_3" >3</string>
    <string name="counter_4" >4</string>
    <string name="counter_5" >5</string>
    <string name="counter_6" >6</string>
    <string name="counter_7" >7</string>
    <string name="counter_8" >8</string>
    <string name="counter_9" >9</string>
    <string name="_plus" >+</string>
    <string name="_minus" >-</string>
    <string name="counter_0" >0</string>
    <string name="_DELE" >/</string>
    <string name="_YM" >*</string>
    <string name="_TOCHKA" >.</string>
    <string name="_RAV" >=</string>



</resources>